# list

./: CMakeLists.txt  berlin_andrei.cpp  berlin_andrei.h  bezborodov_pavel.cpp  bezborodov_pavel.h  counted.cpp  counted.h  drozdova_aleksandra.cpp  drozdova_aleksandra.h  fault_injection.cpp  fault_injection.h  khala_vladislav.cpp  khala_vladislav.h  kozelko_sergei.cpp  kozelko_sergei.h  krivopaltsev_dmitriy.cpp  krivopaltsev_dmitriy.h  list.h  main.cpp  nisht_konstantin.cpp  nisht_konstantin.h  postnikova_anastasia.cpp  postnikova_anastasia.h  sorokin_ivan.cpp  sorokin_ivan.h  std.cpp  terentiev_mikhail.cpp  terentiev_mikhail.h  tests.inl  yurchenko_artem.cpp  yurchenko_artem.h  zhdan_egor.cpp  zhdan_egor.h
